@@ -1,0 +1,4 @@
+/**
+ * Provides classes related to jaas.
+ */
+package org.springframework.kafka.security.jaas;
