@@ -7,7 +7,16 @@ New `KafkaHeaders` have been introduced regarding `timestamp` support.
 Also new `KafkaConditions.timestamp()` and `KafkaMatchers.hasTimestamp()` testing utilities have been added.
 See <<kafka-template>>, <<kafka-listener-annotation>> and <<testing>> for more details.
 
-===== @KafkaListener Changes
+==== @KafkaListener Changes
 
 You can now configure a `KafkaListenerErrorHandler` to handle exceptions.
 See <<annotation-error-handling>> for more information.
+==== @EmbeddedKafka Annotation
+
+For convenience a test class level `@EmbeddedKafka` annotation is provided with the purpose to register `KafkaEmbedded` as a bean.
+See <<testing>> for more information.
+
+==== Kerberos Configuration
+
+Support for configuring Kerberos is now provided.
+See <<kerberos>> for more information.
